# artifactory-config

./: .gitignore  .pylintrc  Dockerfile  LICENSE.txt  Pipfile  README.md  main.spec  pyproject.toml  requirements.txt
artifactoryconfig/: main.py
artifactoryconfig/lib/: artifactory.py  configreader.py  helper.py  linting.py  namespaces.py
scripts/: build-push-docker.sh
tests/: test_artifactory.py  test_configreader.py  test_linting.py  test_namespaces.py
tests/resources/: vault-secrets.yaml
